statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql

spec:
  serviceName: mysqldb
  replicas: 1

  selector:
    matchLabels:
      app: app-database

  template:
    metadata:
      labels:
        app: app-database

    spec:
      containers:
        - name: dbcont
          image: aslesha123/phpapp:dbimage

          ports:
            - containerPort: 3306

          # Secret integration
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          volumeMounts:
            - name: pvc-1
              mountPath: /var/lib/mysql

  volumeClaimTemplates:
    - metadata:
        name: pvc-1
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp2  
        resources:
          requests:
            storage: 2Gi
